# sequoia_report_maker

./: .gitignore  Cargo.toml  README.md  data.json  data0.json  hours.txt
python_pdf/: config.py  draw_audiogram.py  legend.py  make_pdf.py
src/: checkboxes.rs  config.rs  config_black.rs  grid.rs  immi_plot.rs  immitance.rs  legend.rs  main.rs  partners.rs  plot.rs  preset.rs  rox_commentaires.txt  tonal_tables.rs  util.rs  view.rs  white_theme.rs
