[package]
name = "sequoia_report_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8", features = ["canvas", "tokio", "debug"] }
# iced = { path = "iced", features = ["canvas", "tokio", "debug"] }

tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"
