[package]
name = "sequoia_report_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["canvas", "tokio", "debug", "image", "advanced"] }
iced_native = { version = "0.10.3" }
iced_graphics = { version = "0.9.0" }
# iced = { path = "iced", features = ["canvas", "tokio", "debug"] }

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"
palette = "0.6.0"
chrono = "0.4.24"
image = "0.24.6"
